@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2031] fixed comparison of empty strings with Oracle that led to duplicate rows in dservices (asaveljevs)
  - [ZBX-2409] fixed server crash when deleting unreachable hosts in discovery (asaveljevs)
  - [DEV-461] changes in GUI configuration menu (Aly)
  - [ZBX-2473] fixed timescroll most right position when "now" (Aly)
